--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: Bijendra Khadka
 markdown: Bioinformatics
-permalink: /blog/:2022/:08/:30/:Bijendra-Khadka-site-launched
+permalink: /blog/:year/:month/:day/:title
